fixed up to date links

--- a/func_testing_dhruv.ipynb
+++ b/func_testing_dhruv.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
     "            \"Authorization\": f\"Bearer {OPENROUTER_API_KEY}\",\n",
     "        },\n",
     "        data=json.dumps({\n",
-    "            \"model\": \"perplexity/sonar-small-chat\", # Optional\n",
+    "            \"model\": \"perplexity/sonar-small-online\", # Optional\n",
     "            \"messages\": [\n",
     "            {\"role\": \"user\", \"content\": \"Give me the top three links to current news articles in a numbered list related to this tweet: \" + text \\\n",
     "                + \"make sure to included the title  followed by a colon and then the link to the article\"}\n",
@@ -171,14 +171,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'party': 'Left', 'articles': [{'title': 'In Memory of January 6: Never Again Disregard Democracy', 'link': 'https://www.cnn.com/2021/01/06/politics/january-6-year-in-review-police-officers/'}, {'title': 'One Year Later, America Is Still Dealing with the Trauma of the January 6 Capitol Insurrection', 'link': 'http://www3.nytimes.com/2021/01/06/us/politics/one-year-later-capitol-insurrection.html'}, {'title': 'One Year Later, the January 6 Attack on the Capitol Boosts Demand for Gun Control', 'link': 'http://www4.it.com/politics/2021/01/06/one-year-later-the-january-6-'}]}\n"
+      "{'party': 'Left', 'articles': [{'title': 'January 6 insurrection news: Trials, investigations and more', 'link': 'https://www.nbcnews.com/january-6-insurrection-us-capitol'}, {'title': 'Republican lawmaker defends Trump endorsement despite Trump downplaying Jan. 6', 'link': 'https://abcnews.go.com/US/january6/'}, {'title': 'U.S. Capitol Riot', 'link': 'https://www.washingtonpost.com/january-6-capitol-riot/'}, {'title': 'Political turmoil exposed as representatives reveal their uncertainty on January 6', 'link': 'https://www.usatoday.com/story/news/politics/2021/01/09/january-6-capitol-violence-exposes-political-turmoil-members-congress-uncertain'}]}\n"
      ]
     }
    ],
