tried to fix cors for filter image

--- a/func_testing.ipynb
+++ b/func_testing.ipynb
@@ -391,6 +391,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def text_to_politics(text):    \n",
+    "    # The URL you want to make a GET request to\n",
+    "    url = 'https://spc-openai-hackathon-backend.onrender.com'\n",
+    "    endpoint = '/text_to_politics'\n",
+    "    full_url = url + endpoint\n",
+    "\n",
+    "    # Assuming you have some variables to pass as query parameters\n",
+    "    query_params = {\n",
+    "        'text': text,\n",
+    "    }\n",
+    "\n",
+    "    # If you need to add headers\n",
+    "    headers = {\n",
+    "        'Accept': 'application/json'\n",
+    "    }\n",
+    "\n",
+    "    # Making the GET request with query parameters and headers\n",
+    "    response = requests.get(full_url, params=query_params, headers=headers)\n",
+    "\n",
+    "    # Checking if the request was successful\n",
+    "    if response.status_code == 200:\n",
+    "        # Processing the response\n",
+    "        data = response.json()\n",
+    "        print(data)\n",
+    "        return data\n",
+    "    else:\n",
+    "        return response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'articles': [{'link': 'https://www.cnn.com/2021/10/15/politics/donald-trump-january-6th-michelle-vernon/index.html', 'title': \"Ex-aide reveals Trump's response to January 6th attack\"}, {'link': 'https://www.politico.com/news/2021/10/13/january-6-attack-house-hearing-465221', 'title': 'Witnesses testify at House hearing on Capitol attack'}, {'link': 'https://www.foxnews.com/politics/january-6-capitol-riot-tammy-stinson-sentenced-to-40', 'title': 'Sentenced to 40 years: Leader of January 6th riot gets maximum prison'}], 'party': 'Right'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'articles': [{'link': 'https://www.cnn.com/2021/10/15/politics/donald-trump-january-6th-michelle-vernon/index.html',\n",
+       "   'title': \"Ex-aide reveals Trump's response to January 6th attack\"},\n",
+       "  {'link': 'https://www.politico.com/news/2021/10/13/january-6-attack-house-hearing-465221',\n",
+       "   'title': 'Witnesses testify at House hearing on Capitol attack'},\n",
+       "  {'link': 'https://www.foxnews.com/politics/january-6-capitol-riot-tammy-stinson-sentenced-to-40',\n",
+       "   'title': 'Sentenced to 40 years: Leader of January 6th riot gets maximum prison'}],\n",
+       " 'party': 'Right'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = text_to_politics(\"The January 6th insurrection was one of the greatest days in American history!\")\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
