breaking many many eggs

--- a/func_testing.ipynb
+++ b/func_testing.ipynb
@@ -256,7 +256,32 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'description': 'few clouds', 'feels_like': 55, 'humidity': 67, 'icon': '02d', 'location': 'Nantou', 'temperature': 56.5, 'wind_direction': 309, 'wind_speed': 7.47}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'description': 'few clouds',\n",
+       " 'feels_like': 55,\n",
+       " 'humidity': 67,\n",
+       " 'icon': '02d',\n",
+       " 'location': 'Nantou',\n",
+       " 'temperature': 56.5,\n",
+       " 'wind_direction': 309,\n",
+       " 'wind_speed': 7.47}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text_to_weather(\"It is absolutely freezing out in the capital of Taiwan!\")"
    ]
