two sentences max

--- a/justin_dumb_stuff.ipynb
+++ b/justin_dumb_stuff.ipynb
@@ -906,6 +906,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = client.chat.completions.create(\n",
+    "model=\"gpt-4-vision-preview\",\n",
+    "    messages=[\n",
+    "        {\n",
+    "        \"role\": \"assistant\",\n",
+    "        \"content\": [\n",
+    "            {\"type\": \"text\", \"text\": f\"Briefly describe the contents of the image. Two sentences max.\"},\n",
+    "            {\n",
+    "            \"type\": \"image_url\",\n",
+    "            \"image_url\": {\n",
+    "                \"url\": \"https://pbs.twimg.com/media/GHmI9i3WEAAXy_9?format=jpg&name=medium\",\n",
+    "            },\n",
+    "            },\n",
+    "        ],\n",
+    "        }\n",
+    "    ],\n",
+    "    max_tokens=300,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Home\\AppData\\Local\\Temp\\ipykernel_1576\\3910531947.py:1: PydanticDeprecatedSince20: The `dict` method is deprecated; use `model_dump` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.5/migration/\n",
+      "  prompt = response.dict()[\"choices\"][0][\"message\"][\"content\"]\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'choices'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m prompt \u001b[38;5;241m=\u001b[39m \u001b[43mresponse\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdict\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mchoices\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmessage\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m      2\u001b[0m filtered_prompt \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mReimagine the following prompt if it were filtered like Anime like Demon Slayer: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mprompt\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      3\u001b[0m response \u001b[38;5;241m=\u001b[39m client\u001b[38;5;241m.\u001b[39mimages\u001b[38;5;241m.\u001b[39mgenerate(\n\u001b[0;32m      4\u001b[0m     model\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdall-e-2\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m      5\u001b[0m     prompt\u001b[38;5;241m=\u001b[39mfiltered_prompt,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m      8\u001b[0m     n\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,\n\u001b[0;32m      9\u001b[0m )\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'choices'"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = response.dict()[\"choices\"][0][\"message\"][\"content\"]\n",
+    "filtered_prompt = f\"Reimagine the following prompt if it were filtered like Anime like Demon Slayer: {prompt}\"\n",
+    "response = client.images.generate(\n",
+    "    model=\"dall-e-2\",\n",
+    "    prompt=filtered_prompt,\n",
+    "    size=\"512x512\",\n",
+    "    quality=\"standard\",\n",
+    "    n=1,\n",
+    ")\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This image displays a graph from a scientific publication titled \"Trends in Molecular Medicine.\" The graph plots the proportion of all possible single-nucleotide genetic variants present in the human population over time, from 5000 BCE to 2000 CE.\\n\\nThe graph comprises two lines: one labeled \"Proportion\" shown in green and another labeled \"Population size\" depicted by a black line. The y-axis on the left represents the proportion of all possible single-nucleotide changes present, scaled from 0 to 1. The y-axis on the right shows the human population size in billions, scaled from 0 to 7. The x-axis represents time in years, delineating a span from 5000 BCE to 2000 CE.\\n\\nThe black line indicating population size remains relatively flat and close to 0 for much of history and then starts to rise steeply around the 1500s, illustrating the exponential growth of the human population. In contrast, the green line for \"Proportion\" slowly increases over time but remains at a low level, suggesting that while the population size has grown substantially, the proportion of genetic variation has remained at a relatively moderate increase.\\n\\nThe caption at the bottom reads, \"Figure 1. The Proportion of all Possible Single-Nucleotide Genetic Variants Present in the Human Population. This proportion is related to the population size in relation to the size of the genome. Over 99% of all single-nucleotide substitutions compatible with life have been'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
