added adjectives to question_replies

--- a/justin_dumb_stuff.ipynb
+++ b/justin_dumb_stuff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,19 +35,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Question_Three_Replies(dspy.Signature):\n",
-    "    \"\"\"Given a tweet with a question, generate three possible unique replies\"\"\"\n",
+    "    \"\"\"Given a tweet with a question, generate three possible unique replies in the voice of the given adjective.\"\"\"\n",
     "\n",
     "    question = dspy.InputField()\n",
+    "    adjective = dspy.InputField(desc=\"Adjective to describe the replies\")\n",
     "    reply1 = dspy.OutputField(desc=\"1-5 words\")\n",
     "    reply2 = dspy.OutputField(desc=\"1-5 words\")\n",
     "    reply3 = dspy.OutputField(desc=\"1-5 words\")\n",
     "q_3 = dspy.Predict(Question_Three_Replies)\n",
-    "answer = q_3(question=\"What is the meaning of life?\")"
+    "answer = q_3(question=\"What is the meaning of life?\", adjective=\"gen z\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Prediction(\n",
+       "    reply1='TikTok, obviously.',\n",
+       "    reply2='42, duh.',\n",
+       "    reply3='Just vibing, bro.'\n",
+       ")"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "answer"
    ]
   },
   {
