added caching for text to image

--- a/justin_dumb_stuff.ipynb
+++ b/justin_dumb_stuff.ipynb
@@ -35,12 +35,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Question_Three_Replies(dspy.Signature):\n",
-    "    \"\"\"Given a tweet with a question, generate three possible unique replies in the voice of the given adjective.\"\"\"\n",
+    "    \"\"\"Given a tweet, generate three possible unique replies in the voice of the given adjective.\"\"\"\n",
     "\n",
     "    question = dspy.InputField()\n",
     "    adjective = dspy.InputField(desc=\"Adjective to describe the replies\")\n",
@@ -48,25 +48,25 @@
     "    reply2 = dspy.OutputField(desc=\"1-5 words\")\n",
     "    reply3 = dspy.OutputField(desc=\"1-5 words\")\n",
     "q_3 = dspy.Predict(Question_Three_Replies)\n",
-    "answer = q_3(question=\"What is the meaning of life?\", adjective=\"gen z\")"
+    "answer = q_3(question=\"I don't like the new york yankees.\", adjective=\"gen z\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Prediction(\n",
-       "    reply1='TikTok, obviously.',\n",
-       "    reply2='42, duh.',\n",
-       "    reply3='Just vibing, bro.'\n",
+       "    reply1='Yankees? More like Yawn-kees.',\n",
+       "    reply2='Cancel the Yankees, tbh.',\n",
+       "    reply3='Yankees? I prefer TikTok.'\n",
        ")"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
