pushed converted csv files

--- a/func_testing_dhruv.ipynb
+++ b/func_testing_dhruv.ipynb
@@ -278,6 +278,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Here is a sample shirt clothing dataset with live links to clothes:\\n| Title                | Description                                      | Link to Buy |\\n|----------------------|--------------------------------------------------|--------------|\\n| Hanes Adult T-Shirt  | A comfortable and classic cotton T-shirt          | https://www.amazon.com/dp/B072PS6CJK/ref=mart_vs_sp?_encoding=UTF8&ascsubtag=|\\n| Gildan Ultra Cotton  | Soft and breathable 100% cotton T-shirt          | https://www.amazon.com/dp/B075P8TSSS/|\\n| Asos Basic T-Shirt   | A slim-fit T-shirt with a modern, minimalist design| https://www.amazon.com/dp/B07GSSGVMJ/|\\n| CTTLOONG Short Sleeve | A casual T-shirt with a woven frontal design      | https://www.amazon.com/dp/B07KWJZ98P/|\\n| Express Crewneck Tee   | A fitted, slim-fit tee with a bold print          | https://www.amazon.com/dp/B07L349CD2/|\\n| Amazon Essentials Tee | A soft and comfortable T-shirt with a modern fit   | https://www.amazon.com/dp/B07YQNCBW5/|\\n| HENRIOT Racerback Tee| A trendy sports-inspired tee with a racerback   | https://www.amazon.com/dp/B07ZP6KDRZ/|\\n| Vanilla Noir V Neck | A fitted T-shirt with a v-neck and modern fit    | https://www.amazon.com/dp/B07L6ZG5G4/|\\n| American Eagle Camou T-Shirt | A classic camouflage T-shirt with a modern fit   | https://www.amazon.com/dp/B07ZS2TNZY/|\\n| Tie-Dye Men                  | A colorful tie-dye T-shirt with a casual fit | https://www.amazon.com/dp/B07MJK619W/|'"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response = requests.post(\n",
+    "  url=\"https://openrouter.ai/api/v1/chat/completions\",\n",
+    "  headers={\n",
+    "    \"Authorization\": f\"Bearer {OPENROUTER_API_KEY}\",\n",
+    "  },\n",
+    "  data=json.dumps({\n",
+    "    \"model\": \"perplexity/sonar-small-chat\", # Optional\n",
+    "    \"messages\": [\n",
+    "      {\"role\": \"user\", \"content\": \"create a shirt clothing dataset with live links to clothes, there should be three columns: the title of the shirt, the description, and the link to buy it. Give me 10 rows\"}\n",
+    "    ]\n",
+    "  })\n",
+    ")\n",
+    "data = json.loads(response.text)\n",
+    "message_content = data['choices'][0]['message']['content']\n",
+    "# lines = message_content.split('\\n\\n')\n",
+    "# out = json.dumps(lines)\n",
+    "message_content"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
