added embeddings for pants

--- a/clothing_scraper.ipynb
+++ b/clothing_scraper.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -318,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1468,6 +1469,214 @@
    "outputs": [],
    "source": [
     "df_tshirts.to_csv('tshirts.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>description</th>\n",
+       "      <th>img_src</th>\n",
+       "      <th>item_link</th>\n",
+       "      <th>item_type</th>\n",
+       "      <th>embedding</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>The pants depicted are a pair of light-colored...</td>\n",
+       "      <td>https://n.nordstrommedia.com/id/sr3/4cb96512-c...</td>\n",
+       "      <td>https://www.nordstromrack.com/s/nike-flex-esse...</td>\n",
+       "      <td>pants</td>\n",
+       "      <td>[0.008910081349313259, 0.02592233568429947, -0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The pants pictured here are a light cream or o...</td>\n",
+       "      <td>https://n.nordstrommedia.com/id/sr3/4cb96512-c...</td>\n",
+       "      <td>https://www.nordstromrack.com/s/nike-flex-esse...</td>\n",
+       "      <td>pants</td>\n",
+       "      <td>[0.03681908920407295, 0.01530189998447895, -0....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The pants depicted are of a light beige or off...</td>\n",
+       "      <td>https://n.nordstrommedia.com/id/sr3/4cb96512-c...</td>\n",
+       "      <td>https://www.nordstromrack.com/s/nike-flex-esse...</td>\n",
+       "      <td>pants</td>\n",
+       "      <td>[0.026372030377388, 0.00572066567838192, -0.02...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>The pants shown are white in color, giving the...</td>\n",
+       "      <td>https://n.nordstrommedia.com/id/sr3/4cb96512-c...</td>\n",
+       "      <td>https://www.nordstromrack.com/s/nike-flex-esse...</td>\n",
+       "      <td>pants</td>\n",
+       "      <td>[0.02924545481801033, 6.426578238460934e-06, -...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The pants shown in the image are a light beige...</td>\n",
+       "      <td>https://n.nordstrommedia.com/id/sr3/4cb96512-c...</td>\n",
+       "      <td>https://www.nordstromrack.com/s/nike-flex-esse...</td>\n",
+       "      <td>pants</td>\n",
+       "      <td>[0.023720253258943558, 0.018178902566432953, -...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>The pants shown are a light cream or off-white...</td>\n",
+       "      <td>https://n.nordstrommedia.com/id/sr3/4cb96512-c...</td>\n",
+       "      <td>https://www.nordstromrack.com/s/nike-flex-esse...</td>\n",
+       "      <td>pants</td>\n",
+       "      <td>[0.03689885511994362, -0.010528667829930782, -...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>The pants shown are a classic pair of men's of...</td>\n",
+       "      <td>https://n.nordstrommedia.com/id/sr3/4cb96512-c...</td>\n",
+       "      <td>https://www.nordstromrack.com/s/nike-flex-esse...</td>\n",
+       "      <td>pants</td>\n",
+       "      <td>[0.042784951627254486, 0.04136744886636734, -0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>The pants pictured here are a light cream or o...</td>\n",
+       "      <td>https://n.nordstrommedia.com/id/sr3/4cb96512-c...</td>\n",
+       "      <td>https://www.nordstromrack.com/s/nike-flex-esse...</td>\n",
+       "      <td>pants</td>\n",
+       "      <td>[0.04546757787466049, 0.022673742845654488, -0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>The pants depicted are a light cream or off-wh...</td>\n",
+       "      <td>https://n.nordstrommedia.com/id/sr3/4cb96512-c...</td>\n",
+       "      <td>https://www.nordstromrack.com/s/nike-flex-esse...</td>\n",
+       "      <td>pants</td>\n",
+       "      <td>[0.03698765113949776, 0.016894424334168434, -0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>The pants depicted in the image are a pair of ...</td>\n",
+       "      <td>https://n.nordstrommedia.com/id/sr3/4cb96512-c...</td>\n",
+       "      <td>https://www.nordstromrack.com/s/nike-flex-esse...</td>\n",
+       "      <td>pants</td>\n",
+       "      <td>[0.014192630536854267, 0.01826438307762146, -0...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>72 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          description  \\\n",
+       "0   The pants depicted are a pair of light-colored...   \n",
+       "1   The pants pictured here are a light cream or o...   \n",
+       "2   The pants depicted are of a light beige or off...   \n",
+       "3   The pants shown are white in color, giving the...   \n",
+       "4   The pants shown in the image are a light beige...   \n",
+       "..                                                ...   \n",
+       "67  The pants shown are a light cream or off-white...   \n",
+       "68  The pants shown are a classic pair of men's of...   \n",
+       "69  The pants pictured here are a light cream or o...   \n",
+       "70  The pants depicted are a light cream or off-wh...   \n",
+       "71  The pants depicted in the image are a pair of ...   \n",
+       "\n",
+       "                                              img_src  \\\n",
+       "0   https://n.nordstrommedia.com/id/sr3/4cb96512-c...   \n",
+       "1   https://n.nordstrommedia.com/id/sr3/4cb96512-c...   \n",
+       "2   https://n.nordstrommedia.com/id/sr3/4cb96512-c...   \n",
+       "3   https://n.nordstrommedia.com/id/sr3/4cb96512-c...   \n",
+       "4   https://n.nordstrommedia.com/id/sr3/4cb96512-c...   \n",
+       "..                                                ...   \n",
+       "67  https://n.nordstrommedia.com/id/sr3/4cb96512-c...   \n",
+       "68  https://n.nordstrommedia.com/id/sr3/4cb96512-c...   \n",
+       "69  https://n.nordstrommedia.com/id/sr3/4cb96512-c...   \n",
+       "70  https://n.nordstrommedia.com/id/sr3/4cb96512-c...   \n",
+       "71  https://n.nordstrommedia.com/id/sr3/4cb96512-c...   \n",
+       "\n",
+       "                                            item_link item_type  \\\n",
+       "0   https://www.nordstromrack.com/s/nike-flex-esse...     pants   \n",
+       "1   https://www.nordstromrack.com/s/nike-flex-esse...     pants   \n",
+       "2   https://www.nordstromrack.com/s/nike-flex-esse...     pants   \n",
+       "3   https://www.nordstromrack.com/s/nike-flex-esse...     pants   \n",
+       "4   https://www.nordstromrack.com/s/nike-flex-esse...     pants   \n",
+       "..                                                ...       ...   \n",
+       "67  https://www.nordstromrack.com/s/nike-flex-esse...     pants   \n",
+       "68  https://www.nordstromrack.com/s/nike-flex-esse...     pants   \n",
+       "69  https://www.nordstromrack.com/s/nike-flex-esse...     pants   \n",
+       "70  https://www.nordstromrack.com/s/nike-flex-esse...     pants   \n",
+       "71  https://www.nordstromrack.com/s/nike-flex-esse...     pants   \n",
+       "\n",
+       "                                            embedding  \n",
+       "0   [0.008910081349313259, 0.02592233568429947, -0...  \n",
+       "1   [0.03681908920407295, 0.01530189998447895, -0....  \n",
+       "2   [0.026372030377388, 0.00572066567838192, -0.02...  \n",
+       "3   [0.02924545481801033, 6.426578238460934e-06, -...  \n",
+       "4   [0.023720253258943558, 0.018178902566432953, -...  \n",
+       "..                                                ...  \n",
+       "67  [0.03689885511994362, -0.010528667829930782, -...  \n",
+       "68  [0.042784951627254486, 0.04136744886636734, -0...  \n",
+       "69  [0.04546757787466049, 0.022673742845654488, -0...  \n",
+       "70  [0.03698765113949776, 0.016894424334168434, -0...  \n",
+       "71  [0.014192630536854267, 0.01826438307762146, -0...  \n",
+       "\n",
+       "[72 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#import the the pants csv\n",
+    "pants = pd.read_csv('./data/pants.csv')\n",
+    "\n",
+    "pants['embedding'] = pants['description'].apply(get_embedding)\n",
+    "\n",
+    "pants\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export the pants csv \n",
+    "pants.to_csv('pants_final', index=False)"
    ]
   },
   {
